--- a/SpeakingServer.vcxproj
+++ b/SpeakingServer.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="LoginManager.cpp" />
     <ClCompile Include="LoginRequestHandler.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MenuManager.cpp" />
     <ClCompile Include="MenuRequestHandler.cpp" />
     <ClCompile Include="PostgreDatabase.cpp" />
     <ClCompile Include="RequestHandlerFactory.cpp" />
@@ -160,6 +161,7 @@
     <ClInclude Include="LoggedUser.hpp" />
     <ClInclude Include="LoginManager.h" />
     <ClInclude Include="LoginRequestHandler.h" />
+    <ClInclude Include="MenuManager.h" />
     <ClInclude Include="MenuRequestHandler.h" />
     <ClInclude Include="PostgreDatabase.h" />
     <ClInclude Include="RequestException.hpp" />
